--- a/addressSample/src/main/webapp/WEB-INF/web.xml
+++ b/addressSample/src/main/webapp/WEB-INF/web.xml
@@ -30,6 +30,11 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
+	<mime-mapping>
+        <extension>json</extension>
+        <mime-type>application/json</mime-type>
+    </mime-mapping>
+	
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
 		<url-pattern>*.css</url-pattern>
@@ -38,6 +43,7 @@
 		<url-pattern>*.jpg</url-pattern>
 		<url-pattern>*.ico</url-pattern>
 		<url-pattern>*.gif</url-pattern>
+		<url-pattern>*.json</url-pattern>
 	</servlet-mapping>
 
 </web-app>
