--- a/addressSample/src/main/webapp/WEB-INF/web.xml
+++ b/addressSample/src/main/webapp/WEB-INF/web.xml
@@ -30,10 +30,10 @@
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 	
-	<mime-mapping>
-        <extension>json</extension>
-        <mime-type>application/json</mime-type>
-    </mime-mapping>
+<!-- 	<mime-mapping> -->
+<!--         <extension>json</extension> -->
+<!--         <mime-type>application/json</mime-type> -->
+<!--     </mime-mapping> -->
 	
 	<servlet-mapping>
 		<servlet-name>default</servlet-name>
@@ -43,7 +43,7 @@
 		<url-pattern>*.jpg</url-pattern>
 		<url-pattern>*.ico</url-pattern>
 		<url-pattern>*.gif</url-pattern>
-		<url-pattern>*.json</url-pattern>
+<!-- 		<url-pattern>*.json</url-pattern> -->
 	</servlet-mapping>
 
 </web-app>
