콤보박스 적용 예제

--- a/addressSample/src/main/webapp/WEB-INF/web.xml
+++ b/addressSample/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 		<url-pattern>*.jpg</url-pattern>
 		<url-pattern>*.ico</url-pattern>
 		<url-pattern>*.gif</url-pattern>
-<!-- 		<url-pattern>*.json</url-pattern> -->
+		<url-pattern>*.jsonn</url-pattern>
 	</servlet-mapping>
 
 </web-app>
